# DocumentProcessor

./: .gitignore  CMakeLists.txt  build.py  congig.py  install.ps1  install.sh  main.py  requirements.txt  анкеты_muzloto.xlsx
core/: muzloto_scanner.cpp
python/: scanner.py
